Update Tenant CRUD operations